@@ -553,9 +553,13 @@ statx	-a32 --no-abbrev --trace-path=stat.sample --trace-path=/dev/full
 strace--absolute-timestamps +strace-t.test --absolute-timestamps
 strace--absolute-timestamps-format-time +strace-t.test --absolute-timestamps=format:time
 strace--absolute-timestamps-format-time-precision-s +strace-t.test --absolute-timestamps=format:time --absolute-timestamps=precision:s
-strace--absolute-timestamps-format-time-precision-ms +strace-tt.test 3 --absolute-timestamps=format:time --absolute-timestamps=precision:ms
-strace--absolute-timestamps-format-time-precision-us +strace-tt.test 6 --absolute-timestamps=format:time --absolute-timestamps=precision:us
-strace--absolute-timestamps-format-time-precision-ns +strace-tt.test 9 --absolute-timestamps=format:time --absolute-timestamps=precision:ns
+strace--absolute-timestamps-format-time-precision-ms +strace-tt.test 3 "%T" "%T" --absolute-timestamps=format:time --absolute-timestamps=precision:ms
+strace--absolute-timestamps-format-time-precision-us +strace-tt.test 6 "%T" "%T" --absolute-timestamps=format:time --absolute-timestamps=precision:us
+strace--absolute-timestamps-format-time-precision-ns +strace-tt.test 9 "%T" "%T" --absolute-timestamps=format:time --absolute-timestamps=precision:ns
+strace--absolute-timestamps-format-strftime-c +strace-tt.test 0 "%c" "%c" --absolute-timestamps=format:strftime=%c
+strace--absolute-timestamps-format-strftime-c-ns +strace-tt.test 0 "%c" "%a %b %e %H:%M:%S\\.[[:digit:]]{9} %Y" --absolute-timestamps=format:strftime=%c --absolute-timestamps=precision:ns
+strace--absolute-timestamps-format-strftime-r-s +strace-tt.test 0 "%r" "%r" --absolute-timestamps=format:strftime=%r --absolute-timestamps=precision:s
+strace--absolute-timestamps-format-strftime-r-ms +strace-tt.test 0 "%r" "%I:%M:%S\\.[[:digit:]]{3} %p" --absolute-timestamps=format:strftime=%r --absolute-timestamps=precision:ms
 strace--absolute-timestamps-format-unix-precision-s +strace-ttt.test 0 --absolute-timestamps=format:unix --absolute-timestamps=precision:s
 strace--absolute-timestamps-format-unix-precision-ms +strace-ttt.test 3 --absolute-timestamps=precision:ms --absolute-timestamps=format:unix
 strace--absolute-timestamps-format-unix-precision-us +strace-ttt.test 6 --absolute-timestamps=precision:us --absolute-timestamps=format:unix
@@ -577,9 +581,9 @@ strace--strings-in-hex-non-ascii	--trace=chdir --strings-in-hex=non-ascii --colu
 strace--timestamps +strace-t.test --timestamps
 strace--timestamps-time +strace-t.test --timestamps=time
 strace--timestamps-time-s +strace-t.test --timestamps=time,s
-strace--timestamps-time-ms +strace-tt.test 3 --timestamps=time,ms
-strace--timestamps-time-us +strace-tt.test 6 --timestamps=time,us
-strace--timestamps-time-ns +strace-tt.test 9 --timestamps=time,ns
+strace--timestamps-time-ms +strace-tt.test 3 "%T" "%T" --timestamps=time,ms
+strace--timestamps-time-us +strace-tt.test 6 "%T" "%T" --timestamps=time,us
+strace--timestamps-time-ns +strace-tt.test 9 "%T" "%T" --timestamps=time,ns
 strace--timestamps-unix-s +strace-ttt.test 0 --timestamps=unix,s
 strace--timestamps-unix-ms +strace-ttt.test 3 --timestamps=unix,ms
 strace--timestamps-unix-us +strace-ttt.test 6 --timestamps=unix,us
