@@ -11,26 +11,36 @@
 
 precision="${1:-6}"
 [ x0 = "x$#" ] || shift
+fmt="${1:-%T}"
+[ x0 = "x$#" ] || shift
+fmt_re="${1:-%T}"
+[ x0 = "x$#" ] || shift
 opts="${*:--tt}"
 
 run_prog_skip_if_failed date +%s > "$LOG"
-run_prog_skip_if_failed date +%T --date "@$(cat "$LOG")" > /dev/null
+run_prog_skip_if_failed date "+${fmt_re}" --date "@$(cat "$LOG")" > /dev/null
 run_prog ../sleep 0
 
 s0="$(date +%s)"
-run_strace $opts -eexecve $args
+LC_TIME=POSIX run_strace $opts -eexecve $args
 s1="$(date +%s)"
 
 s="$s0"
 t_reg=
 while [ "$s" -le "$s1" ]; do
-	t="$(date +%T --date "@$s")"
+	t="$(date "+${fmt_re}" --date "@$s")"
 	[ -z "$t_reg" ] && t_reg="$t" || t_reg="$t_reg|$t"
 	s=$(($s + 1))
 done
 
+if [ x0 = "x${precision}" ]; then
+	subsec_re=""
+else
+	subsec_re="\\.[[:digit:]]{${precision}}"
+fi
+
 cat > "$EXP" << __EOF__
-($t_reg)\\.[[:digit:]]{${precision}} execve\\("\\.\\./sleep", \\["\\.\\./sleep", "0"\\], 0x[[:xdigit:]]* /\\* [[:digit:]]* vars \\*/\\) = 0
+($t_reg)${subsec_re} execve\\("\\.\\./sleep", \\["\\.\\./sleep", "0"\\], 0x[[:xdigit:]]* /\\* [[:digit:]]* vars \\*/\\) = 0
 __EOF__
 
 match_grep "$LOG" "$EXP"
